--- a/dapp.conf
+++ b/dapp.conf
@@ -3,5 +3,5 @@
 	"icon":"chatter-icon.png",
 	"version" : "1.2.0",
 	"description": "Social Message Web",
-	"browser":"external"
+	"browser":"internal"
 }
