--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "chatter",
   "private": true,
   "description": "Social Message Web",
-  "version": "1.1.3",
+  "version": "1.2.0",
   "type": "module",
   "scripts": {
-    "build": "cp -r ./src ./build",
+    "build": "cp -r ./src/* ./build",
     "package": "bash ./create-minima-app/package.sh",
     "postbuild": "node ./create-minima-app/postbuild.js",
     "copysrc": "bash ./create-minima-app/copySrcToBuild.sh",
